--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,6 @@ torchaudio
 torchvision
 translatepy
 unidecode
-vall-e @ git+https://github.com/enhuiz/vall-e.git@3476d393d2133fa9b50d5ad999ca13b95fc22060
+vall-e @ git+https://github.com/Plachtaa/VALL-E-X.git@3faaf8ccadb154d63b38070caf518ce9309ea0f4
 vocos
 wget
